# D4-Market-BOT

./: .gitignore  README.md  pyproject.toml  requirements.txt
BOT/: kill.bat  main.py  session-legit.bat
CONFIG/: .env.example  accounts.yaml.example  config.yaml  config.yaml.example  defaults.yaml
SRC/: __init__.py
SRC/ai/: classifier.py  gemini.py
SRC/config/: settings.py  templates.py
SRC/core/: bot.py  diablo_api.py  inventory.py  listing_manager.py  ws_client.py
SRC/core/api/: auth.py  bnet.py  chat.py  listings.py
SRC/integrations/: control_server.py  discord_bot.py
SRC/managers/: __init__.py  account_manager.py  session_manager.py
SRC/storage/: db.py  repository.py
SRC/utils/: dashboard.py  delays.py  formatting.py  item_parser.py  logger.py  price_parser.py
SRC/web_ui/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
SRC/web_ui/frontend/src/: App.tsx  index.css
